--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: python
 python:
-  - "2.7"
   - "3.4"
 install:
   - "pip install ."
-script: "octohat glasnt/octohat"
+script: 
+  - "octohat glasnt/octohat"
+  - "octohat anchor/vaultaire"
+  - "octohat avinassh/rockstar"
+  - "octohat hakimel/reveal.js"
+  - "octohat kennethreitz/requests"
+
