Test CKANi for @pjf. Let's see if I can make it explode

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,4 @@ python:
 install:
   - "pip install ."
 script: 
-  - "octohat glasnt/octohat"
-  - "octohat anchor/vaultaire"
-  - "octohat avinassh/rockstar"
-  - "octohat hakimel/reveal.js"
-  - "octohat kennethreitz/requests"
+  - "octohat KSP-CKAN/CKAN"
