--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ python:
 # command to install dependencies
 install:
   - "pip install ."
-script: "octohat glasnt/octohat"
+script:  
+  - "octohat glasnt/octohat"
+  - "octohat avinassh/rockstar"
