added __pycache__, et al. to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # ignore locally generated html files
 *.html
 
+# precompiled stuff
+__pycache__/
+*.py[cod]
+
 # Distribution / packaging
 bin/
 build/
